--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
@@ -37,8 +37,8 @@
         <main>
             <h1 class="heading">Nelson Muchonji Bifwoli</h1>
             <section class="card about">
-                <div class="card-heading p1">
-                    <span>About Me</span>
+                <div class="card-heading">
+                    <h2>About Me</h2>
                 </div>
                 <div class="d-flex p2">
                     <p>
@@ -85,8 +85,8 @@
             </section>
 
             <section class="card webdev">
-                <div class="card-heading p1">
-                    <span>Web Dev Resources</span>
+                <div class="card-heading">
+                    <h2>Web Dev Resources</h2>
                 </div>
                 <div class="d-flex flex-col justify-center webdev-links">
                     <ul>
