update requirements audit

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <title>
             WDD 131 – Dynamic Web Fundamentals – Nelson Muchonji Bifwoli
         </title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./styles/base.css" />
         <script src="./scripts/getdates.js" defer></script>
     </head>
@@ -61,7 +64,7 @@
                 </div>
                 <div class="text-center">
                     <span class="bold text-lg">Kwale, Kenya</span>
-                    <hr style="width: 80%" />
+                    <hr class="separator" />
                 </div>
                 <div class="d-flex p2">
                     <img
@@ -123,12 +126,7 @@
                             >
                         </li>
                         <li>
-                            <a
-                                href="https://www.udemy.com"
-                                target="_blank"
-                                rel="noopener noreferrer"
-                                >Udemy</a
-                            >
+                            <a href="https://www.udemy.com" target="_blank" rel="noopener noreferrer">Udemy</a>
                         </li>
                         <li>
                             <a href="#">Image Placeholder</a>
