final audit changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="#">Final Project</a>
             </nav>
         </header>
-        <main>
+        <main class="content-grid">
             <h1 class="heading">Nelson Muchonji Bifwoli</h1>
             <section class="card about">
                 <div class="card-heading">
@@ -94,36 +94,16 @@
                 <div class="d-flex flex-col justify-center webdev-links">
                     <ul>
                         <li>
-                            <a
-                                href="https://dev.to"
-                                target="_blank"
-                                rel="noopener noreferrer"
-                                >Dev.to Community</a
-                            >
+                            <a href="https://dev.to" target="_blank" rel="noopener noreferrer">Dev.to Community</a>
                         </li>
                         <li>
-                            <a
-                                href="https://www.smashingmagazine.com"
-                                target="_blank"
-                                rel="noopener noreferrer"
-                                >Smashing Magazine</a
-                            >
+                            <a href="https://www.smashingmagazine.com" target="_blank" rel="noopener noreferrer">Smashing Magazine</a>
                         </li>
                         <li>
-                            <a
-                                href="https://css-tricks.com"
-                                target="_blank"
-                                rel="noopener noreferrer"
-                                >CSS Tricks</a
-                            >
+                            <a href="https://css-tricks.com" target="_blank" rel="noopener noreferrer">CSS Tricks</a>
                         </li>
                         <li>
-                            <a
-                                href="https://www.w3schools.com"
-                                target="_blank"
-                                rel="noopener noreferrer"
-                                >W3 Schools</a
-                            >
+                            <a href="https://www.w3schools.com" target="_blank" rel="noopener noreferrer">W3 Schools</a>
                         </li>
                         <li>
                             <a href="https://www.udemy.com" target="_blank" rel="noopener noreferrer">Udemy</a>
