audit changes update

--- a/temples.html
+++ b/temples.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Temple Albums" />
         <meta name="author" content="Nelson Muchonji Bifwoli" />
@@ -28,11 +28,11 @@
     </head>
     <body>
         <header class="d-flex flex-btn bg-primary-dark">
-            <span
+            <h1
                 id="course-title"
                 class="text-center p3 text-white font-heading"
                 >Temple Album
-            </span>
+            </h1>
             <nav id="menu-items" class="p1 font-heading d-none">
                 <a href="#">Home</a>
                 <a href="#">Old</a>
@@ -56,7 +56,7 @@
             </div>
         </header>
         <main>
-            <h1 class="heading text-center">Home</h1>
+            <h2 class="heading text-center">Home</h2>
             <hr />
             <section class="figures">
                 <figure>
