--- a/place.html
+++ b/place.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Places Santorini Greece" />
         <meta name="author" content="Nelson Muchonji Bifwoli" />
         <title>Santorini Greece</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet"/>
         <link rel="stylesheet" href="./styles/place.css" />
         <script src="./scripts/getdates.js" defer></script>
         <script src="./scripts/place.js" defer></script>
