--- a/place.html
+++ b/place.html
@@ -6,7 +6,10 @@
         <meta name="description" content="Places Santorini Greece" />
         <meta name="author" content="Nelson Muchonji Bifwoli" />
         <title>Santorini Greece</title>
-        <link rel="stylesheet" href="./styles/place.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet"/>
+        <link rel="stylesheet" href="./styles/place.css"/>
         <script src="./scripts/getdates.js" defer></script>
         <script src="./scripts/place.js" defer></script>
     </head>
