--- a/place.html
+++ b/place.html
@@ -8,8 +8,8 @@
         <title>Santorini Greece</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet"/>
-        <link rel="stylesheet" href="./styles/place.css"/>
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet" />
+        <link href="./styles/place.css" rel="stylesheet" />
         <script src="./scripts/getdates.js" defer></script>
         <script src="./scripts/place.js" defer></script>
     </head>
