--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Temple Albums" />
         <meta name="author" content="Nelson Muchonji Bifwoli" />
@@ -56,7 +56,7 @@
             </div>
         </header>
         <main>
-            <h1 class="heading text-center">Home</h1>
+            <h1 class="heading text-center">Temple List</h1>
             <hr />
             <section class="figures">
                 <!-- Temples listing -->
