HTML validation updates

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Skills2Work Site plan" />
-  <meta name="author" content="Nelson Muchonji Bifwoli" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Skills2Work Site plan">
+  <meta name="author" content="Nelson Muchonji Bifwoli">
   <title>Skills2Work | Bridging Skills with Remote Work</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -46,7 +46,7 @@
           <li><strong>Background Gray (#F2F2F2):</strong> Used for content background.</li>
           <li><strong>White (#FBFBFB):</strong> Used for text and clean areas.</li>
         </ul>
-        <img src="images/color schema for skills2work.png" class="schema" alt="Color Scheme">
+        <img src="images/color-schema-for-skills2work.png" class="schema" alt="Color Scheme">
       </div>
     </section>
 
@@ -66,7 +66,7 @@
         <h3>Mobile</h3>
         <img src="images/mobile.png" alt="Mobile Wireframe">
         <h3>Large Screen</h3>
-        <img src="images/Large Screen.png" class="lagre-screen" alt="Large Screen Wireframe">
+        <img src="images/large-screen.png" class="lagre-screen" alt="Large Screen Wireframe">
       </div>
     </section>
   </main>
