update errors on audit

--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Product Review Form" />
         <meta name="author" content="Nelson Muchonji Bifwoli" />
@@ -24,7 +24,7 @@
         </header>
         <main>
             <section>
-                <form id="review-form" action="./review.html" method="get">
+                <form id="review-form" action="review.html" method="get">
                     <div>
                         <label for="product-name">Product Name.</label>
                         <select name="product-name" id="product-name" required>
