--- a/review.html
+++ b/review.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Product Review Form" />
         <meta name="author" content="Nelson Muchonji Bifwoli" />
