--- a/form.html
+++ b/form.html
@@ -24,7 +24,7 @@
         </header>
         <main>
             <section>
-                <form id="review-form" action="review.html" method="get">
+                <form method="get" action="review.html" id="review-form" >
                     <div>
                         <label for="product-name">Product Name.</label>
                         <select name="product-name" id="product-name" required>
