--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                         data-driven advertising.
                     </p>
                     <img
+                        loading="lazy"
                         class="card-img"
                         src="./images/profile.webp"
                         alt="nelson profile picture"
@@ -68,6 +69,7 @@
                 </div>
                 <div class="d-flex p2">
                     <img
+                        loading="lazy"
                         class="card-img"
                         src="./images/kwale.webp"
                         alt="kwale beach"
@@ -122,6 +124,7 @@
                 Bifwoli <span class="text-secondary text-lg">⌚︎</span> Kenya
             </p>
             <p id="lastmodified"></p>
+            <p id="lastvisit"></p>
         </footer>
     </body>
 </html>
